peac_dev/force-app/main/default/objects/Miscellaneous_Invoice_Item__c/Miscellaneous_Invoice_Item__c.object-meta.xml
<CustomObject>
    <label>Miscellaneous Invoice Item</label>
    <nameField>
        <displayFormat>MI-{0}</displayFormat>
        <label>Miscellaneous Invoice Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Miscellaneous Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>