peac_dev/force-app/main/default/objects/Miscellaneous_Invoice_Item__c/fields/CB_Disp__c.field-meta.xml
<CustomField>
    <fullName>CB_Disp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CB/Disp</label>
    <type>Checkbox</type>
</CustomField>