peac_dev/force-app/main/default/objects/Miscellaneous_Invoice_Item__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Miscellaneous Invoice Items</relationshipLabel>
    <relationshipName>Miscellaneous_Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>