peac_dev/force-app/main/default/objects/Miscellaneous_Invoice_Item__c/fields/Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code__c</fullName>
    <formula>Dealer__r.Dealer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Code</label>
    <type>Text</type>
</CustomField>