peac_dev/force-app/main/default/objects/Miscellaneous_Invoice_Item__c/fields/Generated_Code__c.field-meta.xml
<CustomField>
    <fullName>Generated_Code__c</fullName>
    <description>field that only gets filled out by apex code on Booking in class TC_UpdateDataFundingToBooking</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Generated Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>