peac_dev/force-app/main/default/objects/Miscellaneous_Invoice_Item__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <label>GL Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0000 - NOT ON FILE</fullName>
            </value>
            <value>
                <fullName>0001 - Interim Rent</fullName>
            </value>
            <value>
                <fullName>0002 - Upfront Tax</fullName>
            </value>
            <value>
                <fullName>0003 - OneTime Documentation Fee</fullName>
            </value>
            <value>
                <fullName>0004 - Ending Deposit</fullName>
            </value>
            <value>
                <fullName>0005 - Security Deposit</fullName>
            </value>
            <value>
                <fullName>0006 - Rental on Disposed Accts</fullName>
            </value>
            <value>
                <fullName>0007 - 90-day same as cash disc.</fullName>
            </value>
            <value>
                <fullName>0008 - CLOSING FEE</fullName>
            </value>
            <value>
                <fullName>0009 - Returned Check Fee</fullName>
            </value>
            <value>
                <fullName>0010 - COLLECTION / REPO FEE</fullName>
            </value>
            <value>
                <fullName>0011 - Insurance Fee</fullName>
            </value>
            <value>
                <fullName>0012 - Legal Fee</fullName>
            </value>
            <value>
                <fullName>0013 - Loss Reserve</fullName>
            </value>
            <value>
                <fullName>0014 - Funding Difference</fullName>
            </value>
            <value>
                <fullName>0015 - Recovery</fullName>
            </value>
            <value>
                <fullName>0016 - Equipment Sale</fullName>
            </value>
            <value>
                <fullName>0017 - Service Contract</fullName>
            </value>
            <value>
                <fullName>0018 - Property Tax</fullName>
            </value>
            <value>
                <fullName>0019 - Fla Doc Stamp Tax</fullName>
            </value>
            <value>
                <fullName>0020 - Renewal Rentals</fullName>
            </value>
            <value>
                <fullName>0021 - Sec Deposit Refund</fullName>
            </value>
            <value>
                <fullName>0022 - Residual Due Vendor</fullName>
            </value>
            <value>
                <fullName>0023 - Insurance Misc</fullName>
            </value>
            <value>
                <fullName>0024 - Hasselblad</fullName>
            </value>
            <value>
                <fullName>0025 - Inventory Equipment Sale</fullName>
            </value>
            <value>
                <fullName>0026 - Payment after Disposition</fullName>
            </value>
            <value>
                <fullName>0027 - Damage/Return Fee</fullName>
            </value>
            <value>
                <fullName>0028 - End of Term Recovery</fullName>
            </value>
            <value>
                <fullName>0029 - Restructure Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>