peac_dev/force-app/main/default/objects/Miscellaneous_Invoice_Item__c/fields/Include_in_Rent__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Rent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Rent?</label>
    <type>Checkbox</type>
</CustomField>