peac_dev/force-app/main/default/objects/Miscellaneous_Invoice_Item__c/fields/Interim_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Interim_Percentage__c</fullName>
    <label>Interim Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>