peac_dev/force-app/main/default/objects/Miscellaneous_Invoice_Item__c/fields/Is_Tax_Calculation_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Is_Tax_Calculation_In_Progress__c</fullName>
    <formula>Opportunity__r.Is_Tax_Calculation_In_Progress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Tax Calculation In Progress?</label>
    <type>Checkbox</type>
</CustomField>