peac_dev/force-app/main/default/objects/Miscellaneous_Invoice_Item__c/fields/Last_Tax_Calculation_Successful__c.field-meta.xml
<CustomField>
    <fullName>Last_Tax_Calculation_Successful__c</fullName>
    <formula>Opportunity__r.Last_Tax_Calculation_Successful__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Tax Calculation Successful</label>
    <type>Checkbox</type>
</CustomField>