peac_dev/force-app/main/default/objects/Miscellaneous_Invoice_Item__c/fields/MIDisp__c.field-meta.xml
<CustomField>
    <fullName>MIDisp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MI/Disp</label>
    <type>Checkbox</type>
</CustomField>