peac_dev/force-app/main/default/objects/Miscellaneous_Invoice_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <inlineHelpText>Opportunity related to this Misc Invoice Item.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Misc Invoices</relationshipLabel>
    <relationshipName>Miscellaneous_Invoice_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>