peac_dev/force-app/main/default/objects/Miscellaneous_Invoice_Item__c/fields/PassThrough__c.field-meta.xml
<CustomField>
    <fullName>PassThrough__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAL-6006</description>
    <label>PassThrough</label>
    <type>Checkbox</type>
</CustomField>