peac_dev/force-app/main/default/objects/Miscellaneous_Invoice_Item__c/fields/PassThroughPercentage__c.field-meta.xml
<CustomField>
    <fullName>PassThroughPercentage__c</fullName>
    <description>SAL-6006</description>
    <label>PassThroughPercentage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>