peac_dev/force-app/main/default/objects/Miscellaneous_Invoice_Item__c/fields/Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>Pay_Code__c</fullName>
    <label>Pay Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Don&apos;t Pay Dealer</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Pay Dealer</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Service Dealer</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Pay Customer</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Service Multiple Dealers</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>