peac_dev/force-app/main/default/objects/Miscellaneous_Invoice_Item__c/fields/Taxable__c.field-meta.xml
<CustomField>
    <fullName>Taxable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxable?</label>
    <type>Checkbox</type>
</CustomField>