peac_dev/force-app/main/default/objects/Miscellaneous_Invoice_Item__c/fields/Vendor_Code__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>